# ac_server_content_updater

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
src/ac_updater/: _logging.py  ac_finder.py  archiver.py  content_copier.py  content_scanner.py  exceptions.py  install_config.py  nextcloud_client.py  nextcloud_config.py  passphrase_store.py  selection_store.py  server_names.py  share_config.py  ssh_client.py  ssh_config.py
src/ac_updater/gui/: app.py  nextcloud_panel.py
tests/: test_ac_finder.py  test_archiver.py  test_content_copier.py  test_content_scanner.py  test_install_config.py  test_nextcloud_client.py  test_nextcloud_config.py  test_selection_store.py  test_share_config.py  test_smoke.py  test_ssh_client.py  test_ssh_config.py
